twitter button alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html, body {
 }
 
 #twitter {
-    margin: 0 568px;
+    text-align: center;
 }
 
 #description {
